1. add disable compile args for LifecycleOverloadDeduplicateSelector 2. add test for compile args and generic
Signed-off-by: TangYang <tangyang9464@163.com>